add section contact

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@
     font-weight: 900;
     text-transform: uppercase;
     letter-spacing: 2px;
+    font-family: 'Nunito Sans', sans-serif;
 } 
 
 .blog__title--edit::before, .blog__title--edit::after {
@@ -258,3 +259,19 @@
     font-weight: 700;
 }
 
+form img {
+    float: left;
+    width: 444px;
+}
+
+form input, textarea {
+    display: block;
+    width: 444px;
+    margin: 30px;
+}
+
+.foot {
+    height: 100px;
+    width: 100%;
+    background-color: #000;
+}
