--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,10 @@ form img {
     width: 444px;
 }
 
+.contact {
+    height: 800px;
+}
+
 form input, textarea {
     display: block;
     width: 444px;
@@ -271,7 +275,7 @@ form input, textarea {
 }
 
 .foot {
-    height: 100px;
+    height: 15vh;
     width: 100%;
     background-color: #000;
 }
