--- a/css/style.css
+++ b/css/style.css
@@ -259,23 +259,55 @@
     font-weight: 700;
 }
 
-form img {
-    float: left;
-    width: 444px;
+/* FORMULARZ */
+
+.form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 500px;
+    margin-bottom: 100px;
 }
 
-.contact {
-    height: 800px;
+.form__img, .form__input {
+    width: 48%;
 }
 
-form input, textarea {
-    display: block;
-    width: 444px;
-    margin: 30px;
-}
-
-.foot {
-    height: 15vh;
+.form__img img {
     width: 100%;
-    background-color: #000;
+}
+
+.form__input {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.form__input input, textarea {
+    /* width: 100%; */
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.checkbox {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.checkbox__tik {
+    transform: scale(3);
+}
+
+.checkbox__text {
+    width: 80%;
+}
+
+.form__btn {
+    background-color: #fff;
+    color: red;
+    border: 2px solid red;
+    box-shadow: 0 0 5px red;
+    font-weight: 900;
+    align-self: flex-end;
 }
